# pmd-to-gltf

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  analyze_pmd.py  animation_speed_ini.c  animation_speed_ini.h  filesystem.c  filesystem.h  gltf_exporter.c  main.c  pmd_parser.c  pmd_psa_types.h  psa_parser.c  skeleton.c  skeleton.h
.github/agents/: c-expert.md  code-reviewer.md  devops-engineer.md
.github/workflows/: build.yml  lint.yml
_codeql_build_dir/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  generate_test_data  test_animation  test_filesystem  test_gltf_output  test_pmd_cubes  test_types
docs/: PMD_COLLADA_README.md  analyze_pmd_py3.py  convert_pmd_all.py  implementation-notes.md  lessons-learned.md  plan.md  pmd-file-format.md  pmd-implementation-details.md  pmd2collada_py3.py  psa-file-format.md  psa-implementation-details.md  rest_pose_fix.py  test-implementation-summary.md  test-suite.md
docs/3dsmax-pmd-exp/: DllEntry.cpp  ExpProp.h  ExpSkeleton.cpp  ExpSkeleton.h  FilePacker.cpp  FilePacker.h  MathUtil.h  Matrix3D.cpp  ModelDef.cpp  ModelDef.h  PMDExp.cpp  PSAExp.cpp  Quaternion.cpp  Quaternion.h  SkeletonAnimDef.cpp  SkeletonAnimDef.h  Vector3D.cpp  Vector3D.h  Vector4D.h
docs/blender/: create_new_armature.py  script.py  script_debug.py  script_final.py
docs/pmd2collada/: README.txt  easyxml.py  pmd2collada.py  pmd2colladaLauncher.py  pmd2collada_defs.py  vector_defs.py
input/: horse.dae  horse.ini  horse.xml  horse_report.txt
output/: horse.gltf
src/: filesystem.c  filesystem.h  gltf_exporter.c  gltf_exporter.h  json_builder.c  json_builder.h  main.c  pmd_parser.c  pmd_psa_types.h  pmd_utils.c  pmd_writer.c  pmd_writer.h  portable_string.h  psa_parser.c  skeleton.c  skeleton.h
tests/: README.md  generate_test_data.c  pmd_writer.c  pmd_writer.h  run_tests.sh  test_animation.c  test_filesystem.c  test_framework.h  test_gltf_output.c  test_gltf_roundtrip.c  test_horse_model.c  test_pmd_cubes.c  test_types.c  test_writer.c
tests/data/: cube_2bones_2props.pmd  cube_4bones.pmd  cube_4bones_anim.psa  cube_5bones.pmd  cube_5bones.xml  cube_5bones_anim.psa  cube_nobones.pmd  test_minimal.pmd  test_minimal.psa
tests/output/: cube_4bones.gltf  cube_5bones.gltf  cube_nobones.gltf
